# ktc-eit-framework

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_GAP.md  BACKPROJECTION_ISSUES.md  BASELINE_STRATEGY.md  COMMANDS_REFERENCE.md  COMPLETE_SETUP_FROM_SCRATCH.md  CONSTRAINT_VIOLATIONS.md  DOCKER_BEGINNER_GUIDE.md  DOCKER_COMMANDS.md  Dockerfile  Dockerfile.full  Dockerfile.full.dockerignore  ELECTRODE_EXTRACTION_GUIDE.md  GITHUB_ACTIONS_SETUP.md  LEVEL4_EXPECTATIONS.md  MATLAB_REFERENCE.md  PERFORMANCE_OPTIMIZATION.md  PHANTOM_PLUGIN.md  PM_ONBOARDING.md  PRODUCTION_DEPLOYMENT.md  PROJECT_CHECKLIST.md  QUICK_START.md  README.md  README_DASHBOARD.md  RUN_GUIDE.md  SESSION_SUMMARY.md  SETUP_GUIDE.md  _analyse_dataset.py  _analyse_mesh.py  _commit_msg.txt  _diag_mock_score.py  _merge_msg.txt  _smoke_test.py  _smoke_test_score.py  app.py  compute_hull_data.py  constraint.txt  create_dummy_data.py  (+26 more)
.streamlit/: config.toml
Codes_Matlab/: Main_SimData.m  Main_TrainingData.m  main.m
batch_processing/: async_runner.py  exceptions.py  file_validator.py  level_selector.py  missing_values.py  parallel_runner.py  sample_loader.py
config/: greit_adapter.yaml
configs/: experiment.yaml  ktc_abc2.yaml  ktc_all_methods.yaml  ktc_e2e.yaml  ktc_pnpmasked.yaml  mock_experiment.yaml  phantom_test.yaml  runtime_BackProjection.yaml  runtime_DampedLeastSquaresReconstruction.yaml  runtime_LinearDifferenceReconstruction.yaml  runtime_method_test.yaml  training_experiment.yaml
dashboard/: benchmark.py  data.py  scoring.py  state.py  theme.py
docs/: METHOD_ADAPTER.md
external_methods/: KTC2023_CUQI4.py  damped_least_squares.py  main.py
ktc-eit-framework/: CONTEXT.md  README.md  SESSION_SUMMARY.md  requirements.txt  run.py
loader/: batch_engine.py  dag_contract.py  feature_eng.py
outputs/: latest.txt  per_run_metrics.json  scores.json  scores_nested.json
reports/: report.html
scripts/: QUICK_START.bat  QUICK_START.sh  compute_hull_data.py  diagnose_ktc.py  download_ktc_dataset.bat  download_ktc_dataset.sh  establish_baselines.py  prepare_dashboard.py
tests/: test_app_smoke.py  test_async_runner.py  test_config_validator.py  test_dashboard_contract.py  test_entry_point_detector.py  test_factory_config.py  test_file_validator.py  test_greit_contract.py  test_hull_plugin.py  test_level_selector.py  test_method_adapter.py  test_methods.py  test_missing_values.py  (+6 more)
(+203 files in other folders)
