[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ktc-framework"
version = "0.1.0"
description = "EIT benchmarking framework for the Kuopio Tomography Challenge (KTC) 2023"
requires-python = ">=3.10"
# Runtime dependencies are managed in requirements.txt (manifest) and
# requirements.lock.txt (pinned snapshot of a known-good venv).
dependencies = []

[project.optional-dependencies]
# Extra methods beyond the 4 core in-process ones (not needed for the core framework)
tensorflow = ["tensorflow>=2.12", "opencv-python>=4.8"]  # CompetitionCNN
torch = ["torch>=2.1"]                                   # ktc2023_postprocessing_master
all-methods = ["tensorflow>=2.12", "opencv-python>=4.8", "torch>=2.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
